$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-08-12 [B] Fixed admin email address validation (thread ID 66512) {eenemeenemuu}
2010-08-12 [B] Added charsetmgr.php to the delete files array (thread ID 66490) {eenemeenemuu}
2010-08-12 [B] Fixed lower case user name issue with plugin usergal_alphatabs (thread ID 66485) {eenemeenemuu}
2010-08-12 [B] Fixed issue with plugin usergal_alphatabs when bridged (thread ID 66340) {eenemeenemuu}
2010-08-10 [M] Counted version count up in SVN repository from cpg1.5.8 to cpg1.5.9 {eenemeenemuu}
2010-08-09 [B] Fixed default page when comments are sorted in descending order (thread ID 66441) {Nibbler}
2010-08-06 [M] Release of cpg1.5.8 {eenemeenemuu}
2010-07-28 [B] Fixed setting default language with language manager (thread ID 66276) {eenemeenemuu}
2010-07-28 [M] Changed form token generation - removed trouble maker parameters (thread ID 65918) {eenemeenemuu}
2010-07-28 [B] Fixed language manager issue for language files with underscore (thread ID 66274) {eenemeenemuu}
2010-07-24 [B] Set moderator group to '0' for all albums to avoid problems for people who used that feature before it was dropped (thread ID 66118) {eenemeenemuu}
2010-07-22 [B] Fixed ecard if no intermediate picture is present (thread ID 66161) {eenemeenemuu}
2010-07-22 [A] Added Estonian language file (user contribution) {eenemeenemuu}
2010-07-21 [B] Update 'last visit' time if it's a 'remember me' session (thread ID 66145) {eenemeenemuu}
2010-07-21 [A] Added Slovak language file (user contribution) {eenemeenemuu}
2010-07-19 [A] While deleting non-images, delete the corresponding custom thumbnail if exists {eenemeenemuu}